// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> component Should render a disabled html link element 1`] = `
.emotion-0 {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #DEDEDE;
  cursor: not-allowed;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #131313;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    disabled=""
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component Should render a html link element with the correct title 1`] = `
.emotion-0 {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #454545;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #131313;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;

exports[`<Link /> component Should render an html link element as secondary 1`] = `
.emotion-0 {
  color: #454545;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active {
  color: #131313;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus-visible {
  outline: 2px solid #131313;
}

<div>
  <a
    class="emotion-0 emotion-1"
    data-testid="link"
    href="/"
  >
    Redirect To
  </a>
</div>
`;
